--- a/qa/wildfly/build.gradle
+++ b/qa/wildfly/build.gradle
@@ -43,22 +43,25 @@ dependencies {
   providedCompile 'javax.enterprise:cdi-api:2.0'
   providedCompile "jakarta.annotation:jakarta.annotation-api:${versions.jakarta_annotation}"
   providedCompile 'jakarta.ws.rs:jakarta.ws.rs-api:2.1.3'
-  api('org.jboss.resteasy:resteasy-jackson2-provider:3.0.26.Final') {
-    exclude module: 'jackson-annotations'
-    exclude module: 'jackson-core'
-    exclude module: 'jackson-databind'
-    exclude module: 'jackson-jaxrs-json-provider'
+  providedCompile('com.fasterxml.jackson.jakarta.rs:jackson-jakarta-rs-json-provider:2.14.2') {
+    exclude module: 'jakarta.activation'
   }
-  api "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
-  api "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
-  api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
-  api "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${versions.jackson}"
-  api "com.fasterxml.jackson.jaxrs:jackson-jaxrs-base:${versions.jackson}"
-  api "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:${versions.jackson}"
-  api "org.apache.logging.log4j:log4j-api:${versions.log4j}"
-  api "org.apache.logging.log4j:log4j-core:${versions.log4j}"
-  api project(path: ':client:rest-high-level')
-  testImplementation project(':test:framework')
+  providedCompile "org.jboss.resteasy:resteasy-core:${versions.resteasy}"
+    api("org.jboss.resteasy:resteasy-jackson2-provider:${versions.resteasy}") {
+      exclude module: 'jackson-annotations'
+      exclude module: 'jackson-core'
+      exclude module: 'jackson-databind'
+    }
+    api "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
+    api "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
+    api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
+    api "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${versions.jackson}"
+    api "com.fasterxml.jackson.jaxrs:jackson-jaxrs-base:${versions.jackson}"
+    api "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:${versions.jackson}"
+    api "org.apache.logging.log4j:log4j-api:${versions.log4j}"
+    api "org.apache.logging.log4j:log4j-core:${versions.log4j}"
+    api project(path: ':client:rest-high-level')
+    testImplementation project(':test:framework')
 }
 
 war {
