--- a/qa/wildfly/build.gradle
+++ b/qa/wildfly/build.gradle
@@ -30,7 +30,6 @@
 
 import org.opensearch.gradle.Architecture
 import org.opensearch.gradle.VersionProperties
-import org.opensearch.gradle.test.TestTask
 
 apply plugin: 'war'
 apply plugin: 'opensearch.build'
@@ -41,27 +40,29 @@ testFixtures.useFixture()
 
 dependencies {
   providedCompile 'javax.enterprise:cdi-api:2.0'
-  providedCompile "jakarta.annotation:jakarta.annotation-api:${versions.jakarta_annotation}"
-  providedCompile 'jakarta.ws.rs:jakarta.ws.rs-api:2.1.3'
-  providedCompile('com.fasterxml.jackson.jakarta.rs:jackson-jakarta-rs-json-provider:2.14.2') {
+  providedCompile 'org.jboss.spec.javax.annotation:jboss-annotations-api_1.2_spec:1.0.2.Final'
+  providedCompile 'org.jboss.spec.javax.ws.rs:jboss-jaxrs-api_2.0_spec:1.0.1.Final'
+  providedCompile('com.fasterxml.jackson.jakarta.rs:jackson-jakarta-rs-json-provider:2.15.2') {
     exclude module: 'jakarta.activation'
   }
+  providedCompile 'com.fasterxml.jackson.jakarta.rs:jackson-jakarta-rs-json-provider:2.15.2'
   providedCompile "org.jboss.resteasy:resteasy-core:${versions.resteasy}"
-    api("org.jboss.resteasy:resteasy-jackson2-provider:${versions.resteasy}") {
-      exclude module: 'jackson-annotations'
-      exclude module: 'jackson-core'
-      exclude module: 'jackson-databind'
-    }
-    api "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
-    api "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
-    api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
-    api "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${versions.jackson}"
-    api "com.fasterxml.jackson.jaxrs:jackson-jaxrs-base:${versions.jackson}"
-    api "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:${versions.jackson}"
-    api "org.apache.logging.log4j:log4j-api:${versions.log4j}"
-    api "org.apache.logging.log4j:log4j-core:${versions.log4j}"
-    api project(path: ':client:rest-high-level')
-    testImplementation project(':test:framework')
+  api("org.jboss.resteasy:resteasy-jackson2-provider:${versions.resteasy}") {
+    exclude module: 'jackson-annotations'
+    exclude module: 'jackson-core'
+    exclude module: 'jackson-databind'
+    exclude module: 'jackson-jaxrs-json-provider'
+  }
+  api "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
+  api "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
+  api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
+  api "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${versions.jackson}"
+  api "com.fasterxml.jackson.jaxrs:jackson-jaxrs-base:${versions.jackson}"
+  api "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:${versions.jackson}"
+  api "org.apache.logging.log4j:log4j-api:${versions.log4j}"
+  api "org.apache.logging.log4j:log4j-core:${versions.log4j}"
+  api project(path: ':client:rest-high-level')
+  testImplementation project(':test:framework')
 }
 
 war {
@@ -85,7 +86,7 @@ dockerCompose {
   useComposeFiles = ['docker-compose.yml']
 }
 
-tasks.register("integTest", TestTask) {
+tasks.register("integTest", Test) {
   outputs.doNotCacheIf('Build cache is disabled for Docker tests') { true }
   maxParallelForks = '1'
   include '**/*IT.class'
