--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -118,7 +118,9 @@ dependencies {
   api 'com.avast.gradle:gradle-docker-compose-plugin:0.16.11'
   api "org.yaml:snakeyaml:${props.getProperty('snakeyaml')}"
   api 'org.apache.maven:maven-model:3.9.2'
-  api 'com.networknt:json-schema-validator:1.0.81'
+  api 'com.networknt:json-schema-validator:1.0.83'
+  api 'org.jruby.jcodings:jcodings:1.0.58'
+  api 'org.jruby.joni:joni:2.1.48'
   api "com.fasterxml.jackson.core:jackson-databind:${props.getProperty('jackson_databind')}"
 
   testFixturesApi "junit:junit:${props.getProperty('junit')}"
