Fixed unit tests
Signed-off-by: suranjay <surajkumar.tu@gmail.com>

--- a/libs/telemetry/build.gradle
+++ b/libs/telemetry/build.gradle
@@ -38,5 +38,5 @@ dependencies {
 }
 
 tasks.named('forbiddenApisMain').configure {
-//  replaceSignatureFiles 'jdk-signatures'
+  replaceSignatureFiles 'jdk-signatures'
 }
