Update Guava throughout, remove exclusions, add new excluded classes
Signed-off-by: Stephen Crawford <steecraw@amazon.com>

--- a/plugins/repository-gcs/build.gradle
+++ b/plugins/repository-gcs/build.gradle
@@ -54,6 +54,7 @@ versions << [
 dependencies {
   api 'com.google.cloud:google-cloud-storage:2.22.3'
   api 'com.google.cloud:google-cloud-core:2.18.1'
+  api 'org.checkerframework:checker-qual:3.33.0'
   runtimeOnly 'com.google.guava:guava:32.0.1-jre'
   api 'com.google.guava:failureaccess:1.0.1'
   api 'com.google.http-client:google-http-client:1.43.2'
@@ -110,7 +111,6 @@ thirdPartyAudit {
     'com.google.common.hash.LittleEndianByteArray$UnsafeByteArray',
     'com.google.common.hash.LittleEndianByteArray$UnsafeByteArray$1',
     'com.google.common.hash.LittleEndianByteArray$UnsafeByteArray$2',
-    'com.google.common.hash.LittleEndianByteArray$UnsafeByteArray$3',
     'com.google.common.util.concurrent.AbstractFuture$UnsafeAtomicHelper',
     'com.google.common.util.concurrent.AbstractFuture$UnsafeAtomicHelper$1',
     'com.google.common.hash.LittleEndianByteArray$UnsafeByteArray',
@@ -197,6 +197,142 @@ thirdPartyAudit {
     'javax.jms.Message',
     'javax.servlet.ServletContextEvent',
     'javax.servlet.ServletContextListener',
+    //google
+    'com.google.api.gax.grpc.GrpcCallContext',
+    'com.google.api.gax.grpc.GrpcInterceptorProvider',
+    'com.google.api.gax.grpc.GrpcStatusCode',
+    'com.google.api.gax.grpc.InstantiatingGrpcChannelProvider',
+    'com.google.api.gax.grpc.InstantiatingGrpcChannelProvider$Builder',
+    'com.google.cloud.grpc.GrpcTransportOptions',
+    'com.google.cloud.grpc.GrpcTransportOptions$Builder',
+    'com.google.iam.v1.GetPolicyOptions$Builder',
+    'com.google.storage.v2.Bucket',
+    'com.google.storage.v2.Bucket$Autoclass',
+    'com.google.storage.v2.Bucket$Autoclass$Builder',
+    'com.google.storage.v2.Bucket$Billing',
+    'com.google.storage.v2.Bucket$Billing$Builder',
+    'com.google.storage.v2.Bucket$Builder',
+    'com.google.storage.v2.Bucket$Cors',
+    'com.google.storage.v2.Bucket$Cors$Builder',
+    'com.google.storage.v2.Bucket$CustomPlacementConfig',
+    'com.google.storage.v2.Bucket$CustomPlacementConfig$Builder',
+    'com.google.storage.v2.Bucket$Encryption',
+    'com.google.storage.v2.Bucket$Encryption$Builder',
+    'com.google.storage.v2.Bucket$IamConfig',
+    'com.google.storage.v2.Bucket$IamConfig$Builder',
+    'com.google.storage.v2.Bucket$IamConfig$UniformBucketLevelAccess',
+    'com.google.storage.v2.Bucket$IamConfig$UniformBucketLevelAccess$Builder',
+    'com.google.storage.v2.Bucket$Lifecycle',
+    'com.google.storage.v2.Bucket$Lifecycle$Builder',
+    'com.google.storage.v2.Bucket$Lifecycle$Rule',
+    'com.google.storage.v2.Bucket$Lifecycle$Rule$Action',
+    'com.google.storage.v2.Bucket$Lifecycle$Rule$Action$Builder',
+    'com.google.storage.v2.Bucket$Lifecycle$Rule$Builder',
+    'com.google.storage.v2.Bucket$Lifecycle$Rule$Condition',
+    'com.google.storage.v2.Bucket$Lifecycle$Rule$Condition$Builder',
+    'com.google.storage.v2.Bucket$Logging',
+    'com.google.storage.v2.Bucket$Logging$Builder',
+    'com.google.storage.v2.Bucket$RetentionPolicy',
+    'com.google.storage.v2.Bucket$RetentionPolicy$Builder',
+    'com.google.storage.v2.Bucket$Versioning',
+    'com.google.storage.v2.Bucket$Versioning$Builder',
+    'com.google.storage.v2.Bucket$Website',
+    'com.google.storage.v2.Bucket$Website$Builder',
+    'com.google.storage.v2.BucketAccessControl',
+    'com.google.storage.v2.BucketAccessControl$Builder',
+    'com.google.storage.v2.BucketName',
+    'com.google.storage.v2.ChecksummedData',
+    'com.google.storage.v2.ChecksummedData$Builder',
+    'com.google.storage.v2.CommonObjectRequestParams',
+    'com.google.storage.v2.CommonObjectRequestParams$Builder',
+    'com.google.storage.v2.ComposeObjectRequest',
+    'com.google.storage.v2.ComposeObjectRequest$Builder',
+    'com.google.storage.v2.ComposeObjectRequest$SourceObject',
+    'com.google.storage.v2.ComposeObjectRequest$SourceObject$Builder',
+    'com.google.storage.v2.CreateBucketRequest',
+    'com.google.storage.v2.CreateBucketRequest$Builder',
+    'com.google.storage.v2.CreateHmacKeyRequest',
+    'com.google.storage.v2.CreateHmacKeyRequest$Builder',
+    'com.google.storage.v2.CreateHmacKeyResponse',
+    'com.google.storage.v2.CreateNotificationConfigRequest',
+    'com.google.storage.v2.CreateNotificationConfigRequest$Builder',
+    'com.google.storage.v2.CryptoKeyName',
+    'com.google.storage.v2.CustomerEncryption',
+    'com.google.storage.v2.CustomerEncryption$Builder',
+    'com.google.storage.v2.DeleteBucketRequest',
+    'com.google.storage.v2.DeleteBucketRequest$Builder',
+    'com.google.storage.v2.DeleteHmacKeyRequest',
+    'com.google.storage.v2.DeleteHmacKeyRequest$Builder',
+    'com.google.storage.v2.DeleteNotificationConfigRequest',
+    'com.google.storage.v2.DeleteNotificationConfigRequest$Builder',
+    'com.google.storage.v2.DeleteObjectRequest',
+    'com.google.storage.v2.DeleteObjectRequest$Builder',
+    'com.google.storage.v2.GetBucketRequest',
+    'com.google.storage.v2.GetBucketRequest$Builder',
+    'com.google.storage.v2.GetHmacKeyRequest',
+    'com.google.storage.v2.GetHmacKeyRequest$Builder',
+    'com.google.storage.v2.GetNotificationConfigRequest',
+    'com.google.storage.v2.GetNotificationConfigRequest$Builder',
+    'com.google.storage.v2.GetObjectRequest',
+    'com.google.storage.v2.GetObjectRequest$Builder',
+    'com.google.storage.v2.GetServiceAccountRequest',
+    'com.google.storage.v2.GetServiceAccountRequest$Builder',
+    'com.google.storage.v2.HmacKeyMetadata',
+    'com.google.storage.v2.HmacKeyMetadata$Builder',
+    'com.google.storage.v2.ListBucketsRequest',
+    'com.google.storage.v2.ListBucketsRequest$Builder',
+    'com.google.storage.v2.ListHmacKeysRequest',
+    'com.google.storage.v2.ListHmacKeysRequest$Builder',
+    'com.google.storage.v2.ListNotificationConfigsRequest',
+    'com.google.storage.v2.ListNotificationConfigsRequest$Builder',
+    'com.google.storage.v2.ListObjectsRequest',
+    'com.google.storage.v2.ListObjectsRequest$Builder',
+    'com.google.storage.v2.ListObjectsResponse',
+    'com.google.storage.v2.LockBucketRetentionPolicyRequest',
+    'com.google.storage.v2.LockBucketRetentionPolicyRequest$Builder',
+    'com.google.storage.v2.NotificationConfig',
+    'com.google.storage.v2.NotificationConfig$Builder',
+    'com.google.storage.v2.NotificationConfigName',
+    'com.google.storage.v2.Object',
+    'com.google.storage.v2.Object$Builder',
+    'com.google.storage.v2.ObjectAccessControl',
+    'com.google.storage.v2.ObjectAccessControl$Builder',
+    'com.google.storage.v2.ObjectChecksums',
+    'com.google.storage.v2.ObjectChecksums$Builder',
+    'com.google.storage.v2.Owner',
+    'com.google.storage.v2.Owner$Builder',
+    'com.google.storage.v2.ProjectName',
+    'com.google.storage.v2.QueryWriteStatusRequest',
+    'com.google.storage.v2.ReadObjectRequest',
+    'com.google.storage.v2.ReadObjectRequest$Builder',
+    'com.google.storage.v2.ReadObjectResponse',
+    'com.google.storage.v2.RewriteObjectRequest',
+    'com.google.storage.v2.RewriteObjectRequest$Builder',
+    'com.google.storage.v2.RewriteResponse',
+    'com.google.storage.v2.ServiceAccount',
+    'com.google.storage.v2.ServiceAccount$Builder',
+    'com.google.storage.v2.StartResumableWriteRequest',
+    'com.google.storage.v2.StartResumableWriteRequest$Builder',
+    'com.google.storage.v2.StartResumableWriteResponse',
+    'com.google.storage.v2.StorageClient',
+    'com.google.storage.v2.StorageClient$ListBucketsPagedResponse',
+    'com.google.storage.v2.StorageClient$ListHmacKeysPagedResponse',
+    'com.google.storage.v2.StorageClient$ListNotificationConfigsPagedResponse',
+    'com.google.storage.v2.StorageSettings',
+    'com.google.storage.v2.StorageSettings$Builder',
+    'com.google.storage.v2.UpdateBucketRequest',
+    'com.google.storage.v2.UpdateBucketRequest$Builder',
+    'com.google.storage.v2.UpdateHmacKeyRequest',
+    'com.google.storage.v2.UpdateHmacKeyRequest$Builder',
+    'com.google.storage.v2.UpdateObjectRequest',
+    'com.google.storage.v2.UpdateObjectRequest$Builder',
+    'com.google.storage.v2.WriteObjectRequest',
+    'com.google.storage.v2.WriteObjectRequest$Builder',
+    'com.google.storage.v2.WriteObjectResponse',
+    'com.google.storage.v2.WriteObjectSpec',
+    'com.google.storage.v2.WriteObjectSpec$Builder',
+    'io.grpc.ManagedChannelBuilder',
+    'io.grpc.Status$Code',
   )
 }
 
