--- a/plugins/repository-gcs/build.gradle
+++ b/plugins/repository-gcs/build.gradle
@@ -54,7 +54,7 @@ versions << [
 dependencies {
   api 'com.google.cloud:google-cloud-storage:1.113.1'
   api 'com.google.cloud:google-cloud-core:2.5.10'
-  runtimeOnly 'com.google.guava:guava:32.0.1-jre'
+  runtimeOnly "com.google.guava:guava:${versions.guava}"
   api 'com.google.guava:failureaccess:1.0.1'
   api 'com.google.http-client:google-http-client:1.43.2'
   api "commons-logging:commons-logging:${versions.commonslogging}"
