--- a/modules/telemetry-otel/build.gradle
+++ b/modules/telemetry-otel/build.gradle
@@ -25,6 +25,7 @@ dependencies {
   api "io.opentelemetry:opentelemetry-sdk-common:${versions.opentelemetry}"
   api "io.opentelemetry:opentelemetry-sdk-trace:${versions.opentelemetry}"
   api "io.opentelemetry:opentelemetry-sdk-metrics:${versions.opentelemetry}"
+  api "io.opentelemetry:opentelemetry-exporter-logging:${versions.opentelemetry}"
   api "io.opentelemetry:opentelemetry-semconv:${versions.opentelemetry}-alpha"
   api "io.opentelemetry:opentelemetry-sdk-logs:${versions.opentelemetry}-alpha"
   api "io.opentelemetry:opentelemetry-api-logs:${versions.opentelemetry}-alpha"
@@ -46,6 +47,10 @@ thirdPartyAudit {
     'io.opentelemetry.api.events.EventEmitterProvider',
     'io.opentelemetry.extension.incubator.metrics.ExtendedDoubleHistogramBuilder',
     'io.opentelemetry.extension.incubator.metrics.ExtendedLongHistogramBuilder',
-    'io.opentelemetry.extension.incubator.metrics.HistogramAdviceConfigurer'
+    'io.opentelemetry.extension.incubator.metrics.HistogramAdviceConfigurer',
+    'io.opentelemetry.sdk.autoconfigure.spi.ConfigProperties',
+    'io.opentelemetry.sdk.autoconfigure.spi.logs.ConfigurableLogRecordExporterProvider',
+    'io.opentelemetry.sdk.autoconfigure.spi.metrics.ConfigurableMetricExporterProvider',
+    'io.opentelemetry.sdk.autoconfigure.spi.traces.ConfigurableSpanExporterProvider'
   )
 }
