--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -1,5 +1,5 @@
 opensearch        = 3.0.0
-lucene            = 9.7.0-snapshot-204acc3
+lucene            = 9.7.0
 
 bundled_jdk_vendor = adoptium
 bundled_jdk = 20.0.1+9
