Rename plugin class
Signed-off-by: suranjay <surajkumar.tu@gmail.com>

--- a/plugins/telemetry-otel/build.gradle
+++ b/plugins/telemetry-otel/build.gradle
@@ -13,7 +13,7 @@ import org.opensearch.gradle.info.BuildParams
 
 opensearchplugin {
   description 'Opentelemetry based telemetry implementation.'
-  classname 'org.opensearch.telemetry.OTelTelemetryModulePlugin'
+  classname 'org.opensearch.telemetry.OTelTelemetryPlugin'
   hasClientJar = true
 }
 
