--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, macos-latest]
+        os: [windows-latest, macos-latest]  # precommit on ubuntu-latest is run as a part of the gradle-check workflow
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
