--- a/test/framework/build.gradle
+++ b/test/framework/build.gradle
@@ -48,11 +48,14 @@ dependencies {
   api "org.mockito:mockito-core:${versions.mockito}"
   api "net.bytebuddy:byte-buddy:${versions.bytebuddy}"
   api "org.objenesis:objenesis:${versions.objenesis}"
+
+  annotationProcessor "org.apache.logging.log4j:log4j-core:${versions.log4j}"
 }
 
 compileJava.options.compilerArgs -= '-Xlint:cast'
 compileJava.options.compilerArgs -= '-Xlint:rawtypes'
 compileJava.options.compilerArgs -= '-Xlint:unchecked'
+compileJava.options.compilerArgs += ['-processor', 'org.apache.logging.log4j.core.config.plugins.processor.PluginProcessor']
 compileTestJava.options.compilerArgs -= '-Xlint:rawtypes'
 
 // the main files are actually test files, so use the appropriate forbidden api sigs
