--- a/server/build.gradle
+++ b/server/build.gradle
@@ -91,6 +91,8 @@ dependencies {
   api project(':libs:opensearch-secure-sm')
   api project(':libs:opensearch-x-content')
   api project(":libs:opensearch-geo")
+  api project(":libs:opensearch-telemetry")
+
 
   compileOnly project(':libs:opensearch-plugin-classloader')
   testRuntimeOnly project(':libs:opensearch-plugin-classloader')
