--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -62,3 +62,7 @@ zstd              = 1.5.5-3
 jzlib             = 1.1.3
 
 resteasy          = 6.2.4.Final
+
+# opentelemetry dependencies
+opentelemetry    = 1.26.0
+
