Moved the telemetry plugin to :test:framework
Signed-off-by: Gagan Juneja <gjjuneja@amazon.com>

--- a/test/telemetry/build.gradle
+++ b/test/telemetry/build.gradle
@@ -15,7 +15,11 @@ apply plugin: 'opensearch.publish'
 dependencies {
   api project(":libs:opensearch-common")
   api project(":libs:opensearch-telemetry")
-  api project(":server")
+}
+
+tasks.named('forbiddenApisMain').configure {
+  //package does not depend on core, so only jdk signatures should be checked
+  replaceSignatureFiles 'jdk-signatures'
 }
 
 test.enabled = false
